feat: adding documetation for get-board
