# src/server/swagger.json
@@ -171,15 +171,15 @@
         "summary": "Busca uma board por id",
         "description": "Buasca uma baord criadas pelo usuario",
         "tags": ["Board"],
+        "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
             "name": "boardId",
-            "in": "params",
+            "in": "path",
             "description": "Buscar board por id",
             "required": true
           }
         ],
-        "security": [{ "bearerAuth": [] }],
         "responses": {
           "400": {
             "description": "Bad_Request"
@@ -197,18 +197,19 @@
             "description": "ok",
             "content": {
               "application/json": {
-                "schema": {
-                  "boardName": {
-                    "type": "string",
-                    "required": true
-                  },
-                  "taskConnect": {
-                    "type": "string"
-                  },
-                  "tasks": {
+                "type": "object",
+                "boardName": {
+                  "type": "string",
+                  "required": true
+                },
+                "taskConnect": {
+                  "type": "string"
+                },
+                "tasks": [
+                  {
                     "$ref": "#/components/schemas/Task"
                   }
-                }
+                ]
               }
             }
           }
